--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
   - $HOME/.sbt/boot/
 
 script:
-  - sbt clean coverage test &&
-    sbt coverageAggregate
+  - sbt clean coverage test
+
 after_success:
-  - sbt coveralls
+  - sbt coverageReport codacyCoverage
