Added distributed Rest API
updated to scala 2.11.8

--- a/example/frontend/conf/application.conf
+++ b/example/frontend/conf/application.conf
@@ -1,61 +1,18 @@
-# This is the main configuration file for the application.
-# ~~~~~
-
-# Secret key
-# ~~~~~
-# The secret key is used to secure cryptographics functions.
-# If you deploy your application to several instances be sure to use the same key!
 application.secret="Qjs1QF6LXAWUf3Tnw@87JqY<gsJbJ;q<S0jcInCcEj@iZ[EkPRZs2voAn]pKHgyE"
-
-# The application languages
-# ~~~~~
 application.langs="en"
 
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
-
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
-
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
-
-# Akka
-# ~~~~~
 
 akka {
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
+    warn-about-java-serializer-usage = off
   }
   
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 0
+      port = 2551
     }
   }
     
@@ -65,6 +22,10 @@ akka {
     roles = [ frontend ]
     auto-down-unreachable-after = 10s
   }
+
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel= "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 }
 
 # Cluster Actors
@@ -95,17 +56,27 @@ akka.actor.deployment {
 
 # disable legacy metrics in akka-cluster, since it is still enabled in akka-cluster by default
 akka.cluster.metrics.enabled=off
-akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
+akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" , "akka.cluster.ddata.DistributedData"]
 
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
-# Root logger:
-logger.root=ERROR
 
-# Logger used by the framework:
-logger.play=INFO
+play.modules.enabled += "asobu.distributed.gateway.GateWayModule"
 
-# Logger provided to your application:
-logger.application=INFO
+asobu.bridgePropsClass = "util.KanaloaBridge"
+
+kanaloa {
+  default-dispatcher.metrics {
+    enabled = on
+    statsd {
+      namespace = asobu-example
+      host = "qa-powerampstats101.ihrcloud.net"
+      port = 8125
+      eventSampleRate = 1.0
+      statusSampleRate = 1.0
+    }
+  }
+
+}
