--- a/example/backend/src/main/resources/application.conf
+++ b/example/backend/src/main/resources/application.conf
@@ -6,7 +6,24 @@ akka {
   
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
+    warn-about-java-serializer-usage = off
+    deployment {
+      /endpointsRegistryRouter = {
+        # Router type provided by metrics extension.
+        router = cluster-metrics-adaptive-group
+        metrics-selector = mix
+
+        nr-of-instances = 100
+        routees.paths = ["/user/endpoint-registry"]
+        cluster {
+          enabled = on
+          use-role = frontend
+          allow-local-routees = off
+        }
+      }
+    }
   }
+
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
@@ -25,8 +42,8 @@ akka {
     }
   
     seed-nodes = [
-      "akka.tcp://application@127.0.0.1:2551",
-      "akka.tcp://application@127.0.0.1:2552"]
+      "akka.tcp://application@127.0.0.1:2551"
+    ]
     roles = [ backend ]
     auto-down-unreachable-after = 10s
   }
@@ -38,4 +55,7 @@ akka {
 
 # disable legacy metrics in akka-cluster, since it is still enabled in akka-cluster by default
 akka.cluster.metrics.enabled=off
-akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
+akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension", "akka.cluster.ddata.DistributedData" ]
+
+
+
