Refactor red to enable more flexible implementation of cross cutting logic (#44)
* added interpreter design to allow custom cross cutting logic with dependency injection

* load interpreter implementation through config

--- a/example/frontend/conf/application.conf
+++ b/example/frontend/conf/application.conf
@@ -65,7 +65,10 @@ akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" , "akka.clust
 
 play.modules.enabled += "asobu.distributed.gateway.GateWayModule"
 
-asobu.bridgePropsClass = "util.KanaloaBridge"
+asobu {
+  bridgePropsClass = util.KanaloaBridge
+  extractorDefinitionInterpreterClass = cross.MyInterpreter
+}
 
 kanaloa {
   default-dispatcher.metrics {
