fix example / remove buildNumbers use git commit hash instead (#59)
* fix example / remove buildNumbers use git commit hash instead

* fix tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
 
 script:
   - sbt clean coverage test
+  - cd example && sbt clean test
 
 after_success:
   - sbt coverageReport coverageAggregate codacyCoverage
