--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,26 @@ jdk:
    - oraclejdk8
 
 
+git:
+  depth: 9999
+
 cache:
   directories:
+  - $HOME/.sbt/0.13/dependency
+  - $HOME/.sbt/boot/scala*
+  - $HOME/.sbt/launchers
   - $HOME/.ivy2/cache
-  - $HOME/.sbt/boot/
+  - $HOME/.nvm
+
+before_cache:
+  - du -h -d 1 $HOME/.ivy2/cache
+  - du -h -d 2 $HOME/.sbt/
+  - find $HOME/.sbt -name "*.lock" -type f -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
 
 script:
-  - sbt clean coverage test
+  - sbt clean coverage test coverageReport
   - cd example && sbt clean test
 
 after_success:
-  - sbt coverageReport coverageAggregate codacyCoverage
+  - sbt ++$TRAVIS_SCALA_VERSION coverageAggregate coveralls
