--- a/example/frontend/conf/application.conf
+++ b/example/frontend/conf/application.conf
@@ -66,8 +66,7 @@ akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" , "akka.clust
 play.modules.enabled += "asobu.distributed.gateway.GateWayModule"
 
 asobu {
-  bridgePropsClass = util.KanaloaBridge
-  extractorDefinitionInterpreterClass = cross.MyInterpreter
+  endpointFactoryProviderClass = util.ExampleEndpointFactoryProvider
 }
 
 kanaloa {
